@@ -1,0 +1,16 @@
+
+// *** Do not edit this file, it is auto-generated ***
+
+#include <cstddef>
+#include "psddl_psana/epixsampler.ddl.h"
+#include <iostream>
+namespace Psana {
+namespace EpixSampler {
+
+ConfigV1::~ConfigV1() {}
+
+
+ElementV1::~ElementV1() {}
+
+} // namespace EpixSampler
+} // namespace Psana
